this change was made using mobile

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>test to learn how to commit and push changes from vscode.dev to github</h1>
+    <p>This paragraph was added using my mobile</p>
 </body>
 </html>
